--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,3 +25,12 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
       with:
         arguments: build
+
+    - name: Assemble Release APK
+      run: ./gradlew assembleRelease
+
+    - name: Pack the APK
+      uses: github/upload-artifact@v4
+      with:
+        name: odr-bancho
+        path: /build/outputs/apk/release/app-release.apk
