--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
       run: ./gradlew assembleRelease
 
     - name: Pack the APK
-      uses: github/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: odr-bancho
         path: /build/outputs/apk/release/app-release.apk
