--- a/build.gradle
+++ b/build.gradle
@@ -110,7 +110,7 @@ android {
 
         release {
             resValue "string", "app_name", "osu!droid-bancho"
-            applicationIdSuffix ".banchorx"
+            applicationIdSuffix '.banchorx'
 //            minifyEnabled true
 //            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard.cfg', 'proguard-kotlin.pro'
             signingConfig signingConfigs.release
@@ -121,6 +121,7 @@ android {
 
         pre_release {
             matchingFallbacks = ['release']
+            applicationIdSuffix '.banchorx'
             resValue "string", "app_name", "osu!droid"
 //            minifyEnabled true
 //            debuggable true
@@ -162,7 +163,7 @@ android {
     android.applicationVariants.configureEach { variant ->
         variant.outputs.configureEach { output ->
             def releaseTime = new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
-            def fileName = "osu!droid-${defaultConfig.versionName}-${variant.buildType.name}-${releaseTime}.apk"
+            def fileName = "app-${variant.buildType.name}.apk"
             outputFileName = fileName
         }
     }
